[workspace]
members = [
    "crates/tm-api",
    "crates/tm-bbcode-macro", "crates/tm-bbcode-macro-tests",
    "crates/tm-bbcode-parser", "crates/tm-bbcode-webcolor",
    "crates/tm-cli",
    "crates/tm-html",
    "crates/tm-macros",
    "crates/tm-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tsdm-mg/toolbox"
repository = "https://github.com/tsdm-mg/toolbox"
license = "MIT"
description = "Toolbox for tsdm moe group, introducing tools for automation and productivity"
rust-version = "1.73.0"

[workspace.dependencies]
tm-api = { path = "crates/tm-api" }
tm-bbcode-macro = { path = "crates/tm-bbcode-macro" }
tm-bbcode-parser = { path = "crates/tm-bbcode-parser" }
tm-bbcode-webcolor = { path = "crates/tm-bbcode-webcolor" }
tm-html = { path = "crates/tm-html" }
tm-macros = { path = "crates/tm-macros" }
tm-types = { path = "crates/tm-types" }

anyhow = "1.0.100"
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.42"
csv = "1.4.0"
flate2 = "1.1.5"
futures = "0.3.31"
proc-macro2 = "1.0.103"
quote = "1.0.42"
racros = "0.3.0"
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json"] }
scraper = "0.25.0"
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
syn = { version = "2.0.111", features = ["extra-traits"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.6"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
