[package]
name = "tm-api"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "APIs used in tsdm"
rust-version.workspace = true

[dependencies]
tm-types.workspace = true

anyhow.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
