[package]
name = "tm-bbcode-macro-tests"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
tm-bbcode-macro.workspace = true

[[bin]]
name = "test-runner"
path = "src/bin.rs"
