[package]
name = "tm-cli"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Commandline tool intergrated APIs for the toolbox project"
rust-version.workspace = true

[dependencies]
tm-api.workspace = true

anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
futures.workspace = true
regex.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
