[package]
name = "tm-macros"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Macros used in toolbox project"
rust-version.workspace = true

[lib]
proc-macro = true

[features]
default = []
selector = ["dep:scraper"]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
scraper = { workspace = true, optional = true }
syn.workspace = true

